[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/human/_Human.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/human/innocent/invisibility.gd" type="Script" id=2]
[ext_resource path="res://entities/human/innocent/innocent_human.gd" type="Script" id=3]

[node name="Human" groups=[
"innocent_human",
] instance=ExtResource( 1 )]
script = ExtResource( 3 )
mouse_sensitivity = 0.5
is_player = true

[node name="Invisibility" type="Spatial" parent="." index="0"]
script = ExtResource( 2 )
human_path = NodePath("..")

[node name="StartTimer" type="Timer" parent="Invisibility" index="0"]
wait_time = 3.0
one_shot = true

[node name="Tween" type="Tween" parent="Invisibility" index="1"]

[node name="PerceptibleArea" parent="Graphics" index="3" groups=[
"innocent_human",
]]
[connection signal="timeout" from="Invisibility/StartTimer" to="Invisibility" method="_on_StartTimer_timeout"]
[connection signal="movement_info" from="CharacterMover" to="Invisibility" method="_on_CharacterMover_movement_info"]
